--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,5 +11,5 @@
 
   <span class="example-spacer"></span>
 
-  <button mat-raised-button color="warn" aria-label="Add Item">Add item</button>
+  <button (click)="openAddItemDialog()" mat-raised-button color="warn" aria-label="Add Item">Add item</button>
 </mat-toolbar>
