--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,3 +1,17 @@
 .example-spacer {
   flex: 1 1 auto;
 }
+
+.container {
+  max-width: 1280px;
+  margin: 15px auto;
+}
+
+table {
+  width: 100%;
+}
+
+.mat-form-field {
+  font-size: 14px;
+  width: 100%;
+}
