added edit functionality

--- a/src/app/dialog/dialog.component.html
+++ b/src/app/dialog/dialog.component.html
@@ -74,5 +74,5 @@
 
 <div mat-dialog-actions [align]="'end'">
   <button mat-raised-button color="warn" mat-dialog-close>Close</button>
-  <button mat-raised-button color="primary" (click)="saveItem()">Save</button>
+  <button mat-raised-button color="primary" (click)="saveItem()">{{ actionButton }}</button>
 </div>
