--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,7 @@
   <span class="example-spacer"></span>
 
   <button
-    (click)="openAddItemDialog()"
+    (click)="openDialog()"
     mat-raised-button
     color="warn"
     aria-label="Add Item"
@@ -66,6 +66,20 @@
       <ng-container matColumnDef="userComment">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>User Comment</th>
         <td mat-cell *matCellDef="let row">{{ row.userComment }}</td>
+      </ng-container>
+
+      <!-- Action Column -->
+      <ng-container matColumnDef="action">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>User Comment</th>
+        <td mat-cell *matCellDef="let row">
+          <button mat-icon-button (click)="editItem(row)" color="primary">
+            <mat-icon>edit</mat-icon>
+          </button>
+
+          <button mat-icon-button color="warn">
+            <mat-icon>delete</mat-icon>
+          </button>
+        </td>
       </ng-container>
 
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
