added delete functionality

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -76,7 +76,7 @@
             <mat-icon>edit</mat-icon>
           </button>
 
-          <button mat-icon-button color="warn">
+          <button mat-icon-button (click)="deleteItem(row.id)" color="warn">
             <mat-icon>delete</mat-icon>
           </button>
         </td>
