--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,101 +1,1 @@
-<mat-toolbar color="primary">
-  <button mat-icon-button class="example-icon" aria-label="Application icon">
-    <mat-icon>developer_mode</mat-icon>
-  </button>
-
-  <span>Angular with JSON Server Application</span>
-
-  <span class="example-spacer"></span>
-
-  <button
-    (click)="openDialog()"
-    mat-raised-button
-    color="warn"
-    aria-label="Add Item"
-  >
-    Add item
-  </button>
-</mat-toolbar>
-
-<div class="container">
-  <mat-form-field appearance="standard">
-    <mat-label>Filter</mat-label>
-    <input
-      matInput
-      (keyup)="applyFilter($event)"
-      placeholder="Ex. Mia"
-      #input
-    />
-  </mat-form-field>
-
-  <div class="mat-elevation-z8">
-    <table mat-table [dataSource]="dataSource" matSort>
-      <!-- Item Name Column -->
-      <ng-container matColumnDef="itemName">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Item Name</th>
-        <td mat-cell *matCellDef="let row">{{ row.itemName }}</td>
-      </ng-container>
-
-      <!-- Item Category Column -->
-      <ng-container matColumnDef="itemCategory">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Item Category</th>
-        <td mat-cell *matCellDef="let row">{{ row.itemCategory }}</td>
-      </ng-container>
-
-      <!-- Date Submitted Column -->
-      <ng-container matColumnDef="dateSubmitted">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>
-          Date Submitted
-        </th>
-        <td mat-cell *matCellDef="let row">{{ row.dateSubmitted | date }}</td>
-      </ng-container>
-
-      <!-- Item Status Column -->
-      <ng-container matColumnDef="itemStatus">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Item Status</th>
-        <td mat-cell *matCellDef="let row">{{ row.itemStatus }}</td>
-      </ng-container>
-
-      <!-- Item Price Column -->
-      <ng-container matColumnDef="itemPrice">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Item Price</th>
-        <td mat-cell *matCellDef="let row">{{ row.itemPrice | currency }}</td>
-      </ng-container>
-
-      <!-- User Comment Column -->
-      <ng-container matColumnDef="userComment">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>User Comment</th>
-        <td mat-cell *matCellDef="let row">{{ row.userComment }}</td>
-      </ng-container>
-
-      <!-- Action Column -->
-      <ng-container matColumnDef="action">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>User Comment</th>
-        <td mat-cell *matCellDef="let row">
-          <button mat-icon-button (click)="editItem(row)" color="primary">
-            <mat-icon>edit</mat-icon>
-          </button>
-
-          <button mat-icon-button (click)="deleteItem(row.id)" color="warn">
-            <mat-icon>delete</mat-icon>
-          </button>
-        </td>
-      </ng-container>
-
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-
-      <!-- Row shown when there is no matching data. -->
-      <tr class="mat-row" *matNoDataRow>
-        <td class="mat-cell" colspan="4">
-          No data matching the filter "{{ input.value }}"
-        </td>
-      </tr>
-    </table>
-
-    <mat-paginator
-      [pageSizeOptions]="[5, 10, 25, 100]"
-      aria-label="Select page of users"
-    ></mat-paginator>
-  </div>
-</div>
+<router-outlet></router-outlet>
