--- a/src/app/dialog/dialog.component.html
+++ b/src/app/dialog/dialog.component.html
@@ -1,4 +1,4 @@
-<h1 mat-dialog-title="">Add Item</h1>
+<h1 mat-dialog-title="Add Item">Add Item</h1>
 <div mat-dialog-content>
   <form [formGroup]="itemForm">
     <mat-form-field appearance="outline">
