added button, refactored namings

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,7 @@
 
   <span class="example-spacer"></span>
   <button
-    (click)="loginUser()"
+    (click)="goToLoginPage()"
     mat-raised-button
     color="accent"
     aria-label="Login"
@@ -17,7 +17,7 @@
   </button>
 
   <button
-    (click)="signupUser()"
+    (click)="goToSubmitPage()"
     mat-raised-button
     color="warn"
     aria-label="Signup"
