--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -13,6 +13,15 @@
         <input matInput formControlName="userPassword" placeholder="Password" />
         <mat-hint>User's Password</mat-hint>
       </mat-form-field>
+
+      <button
+        (click)="login()"
+        mat-raised-button
+        color="primary"
+        aria-label="Add Item"
+      >
+        Login
+      </button>
     </form>
   </div>
 </div>
