--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -19,6 +19,7 @@
         mat-raised-button
         color="primary"
         aria-label="Add Item"
+        class="login-button"
       >
         Login
       </button>
