--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -1,1 +1,34 @@
-<p>signup works!</p>
+<div class="signup">
+  <h1 mat-dialog-title="">Login Form</h1>
+  <div mat-dialog-content>
+    <form [formGroup]="signUpForm">
+      <mat-form-field appearance="outline">
+        <mat-label>Full Name</mat-label>
+        <input matInput formControlName="userName" placeholder="Name" />
+        <mat-hint>User's Full Name</mat-hint>
+      </mat-form-field>
+
+      <mat-form-field appearance="outline">
+        <mat-label>Email</mat-label>
+        <input matInput formControlName="userEmail" placeholder="Email" />
+        <mat-hint>User's Email</mat-hint>
+      </mat-form-field>
+
+      <mat-form-field appearance="outline">
+        <mat-label>Password</mat-label>
+        <input matInput formControlName="userPassword" placeholder="Password" />
+        <mat-hint>User's Password</mat-hint>
+      </mat-form-field>
+
+      <button
+        (click)="signup()"
+        mat-raised-button
+        color="primary"
+        aria-label="Add Item"
+        class="signup-button"
+      >
+        Signup
+      </button>
+    </form>
+  </div>
+</div>
