updated signup logic

--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -1,5 +1,5 @@
 <div class="signup">
-  <h1 mat-dialog-title="">Login Form</h1>
+  <h1 mat-dialog-title="">Signup Form</h1>
   <div mat-dialog-content>
     <form [formGroup]="signUpForm">
       <mat-form-field appearance="outline">
