added login logic

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -10,7 +10,7 @@
 
       <mat-form-field appearance="outline">
         <mat-label>Password</mat-label>
-        <input matInput formControlName="userPassword" placeholder="Password" />
+        <input matInput formControlName="userPassword" placeholder="Password" type="password" />
         <mat-hint>User's Password</mat-hint>
       </mat-form-field>
 
